--- a/tutorials/a_getting_started.ipynb
+++ b/tutorials/a_getting_started.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "bda42169",
+   "id": "5430a3ac",
    "metadata": {},
    "source": [
     "# Getting started\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2119d6a3",
+   "id": "0bdf9784",
    "metadata": {},
    "source": [
     "\n",
@@ -24,13 +24,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7da1a34b",
+   "id": "c4be7d86",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-29T12:06:54.284611Z",
-     "iopub.status.busy": "2024-04-29T12:06:54.284397Z",
-     "iopub.status.idle": "2024-04-29T12:06:55.464808Z",
-     "shell.execute_reply": "2024-04-29T12:06:55.464156Z"
+     "iopub.execute_input": "2024-04-30T12:41:43.635311Z",
+     "iopub.status.busy": "2024-04-30T12:41:43.635111Z",
+     "iopub.status.idle": "2024-04-30T12:41:44.864364Z",
+     "shell.execute_reply": "2024-04-30T12:41:44.863754Z"
     }
    },
    "outputs": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23a93df3",
+   "id": "e658d7c7",
    "metadata": {},
    "source": [
     "The group_id, unsurprisingly, groups orbitals. For example: if you create a two-level adatom, you need two orbitals that share the same group_id. In the same way, all orbitals in a graphene sheet share the same group_id."
@@ -71,13 +71,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0edbac4e",
+   "id": "a1710dcd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-29T12:06:55.467472Z",
-     "iopub.status.busy": "2024-04-29T12:06:55.467019Z",
-     "iopub.status.idle": "2024-04-29T12:06:55.471646Z",
-     "shell.execute_reply": "2024-04-29T12:06:55.471151Z"
+     "iopub.execute_input": "2024-04-30T12:41:44.867445Z",
+     "iopub.status.busy": "2024-04-30T12:41:44.866702Z",
+     "iopub.status.idle": "2024-04-30T12:41:44.871977Z",
+     "shell.execute_reply": "2024-04-30T12:41:44.871330Z"
     }
    },
    "outputs": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6993789b",
+   "id": "3984736b",
    "metadata": {},
    "source": [
     "This is all there is to know about orbitals!"
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c7dbe02",
+   "id": "aa781077",
    "metadata": {},
    "source": [
     "\n",
@@ -128,13 +128,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "161286bb",
+   "id": "4adb9796",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-29T12:06:55.473854Z",
-     "iopub.status.busy": "2024-04-29T12:06:55.473664Z",
-     "iopub.status.idle": "2024-04-29T12:06:55.477372Z",
-     "shell.execute_reply": "2024-04-29T12:06:55.476875Z"
+     "iopub.execute_input": "2024-04-30T12:41:44.874300Z",
+     "iopub.status.busy": "2024-04-30T12:41:44.874113Z",
+     "iopub.status.idle": "2024-04-30T12:41:44.878023Z",
+     "shell.execute_reply": "2024-04-30T12:41:44.877335Z"
     }
    },
    "outputs": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c62d85e",
+   "id": "c5d32f32",
    "metadata": {},
    "source": [
     "Let's inspect a material."
@@ -167,13 +167,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a71d7052",
+   "id": "2bbf4558",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-29T12:06:55.479455Z",
-     "iopub.status.busy": "2024-04-29T12:06:55.479270Z",
-     "iopub.status.idle": "2024-04-29T12:06:55.483165Z",
-     "shell.execute_reply": "2024-04-29T12:06:55.482635Z"
+     "iopub.execute_input": "2024-04-30T12:41:44.880165Z",
+     "iopub.status.busy": "2024-04-30T12:41:44.879966Z",
+     "iopub.status.idle": "2024-04-30T12:41:44.883930Z",
+     "shell.execute_reply": "2024-04-30T12:41:44.883433Z"
     }
    },
    "outputs": [
@@ -191,8 +191,8 @@
       "    Position: (0, 0), Tag: sublattice_1, Species: pz\n",
       "    Position: (-0.3333333333333333, -0.6666666666666666), Tag: sublattice_2, Species: pz\n",
       "  Interactions:\n",
-      "    Type: hopping, Participants: ('pz', 'pz'), Couplings (neighbor, function): ([0.0, 2.66], <function Material.add_interaction.<locals>.<lambda> at 0x7f585df92ac0>)\n",
-      "    Type: coulomb, Participants: ('pz', 'pz'), Couplings (neighbor, function): ([16.522, 8.64, 5.333], <function Material.add_interaction.<locals>.<lambda> at 0x7f585df92c00>)\n",
+      "    Type: hopping, Participants: ('pz', 'pz'), Couplings (neighbor, function): ([0.0, 2.66], <function Material.add_interaction.<locals>.<lambda> at 0x7f13808feca0>)\n",
+      "    Type: coulomb, Participants: ('pz', 'pz'), Couplings (neighbor, function): ([16.522, 8.64, 5.333], <function Material.add_interaction.<locals>.<lambda> at 0x7f13808fede0>)\n",
       "\n"
      ]
     }
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "168dfaeb",
+   "id": "a9a8b3ef",
    "metadata": {},
    "source": [
     "There are parameters regarding the geometry, the type of the involved orbitals (the built-in graphene model contains only a single spin polarized pz orbital) , the position of orbitals in the unit cell and the interactions (currently, GRANAD supports hoppings and Coulomb interactions). Let's pick a concrete material."
@@ -212,13 +212,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "3e37426f",
+   "id": "316453f8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-29T12:06:55.485402Z",
-     "iopub.status.busy": "2024-04-29T12:06:55.485039Z",
-     "iopub.status.idle": "2024-04-29T12:06:55.488176Z",
-     "shell.execute_reply": "2024-04-29T12:06:55.487516Z"
+     "iopub.execute_input": "2024-04-30T12:41:44.886248Z",
+     "iopub.status.busy": "2024-04-30T12:41:44.885889Z",
+     "iopub.status.idle": "2024-04-30T12:41:44.893650Z",
+     "shell.execute_reply": "2024-04-30T12:41:44.893160Z"
     }
    },
    "outputs": [],
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "833bc73c",
+   "id": "717c5465",
    "metadata": {},
    "source": [
     "## OrbitalLists\n",
@@ -239,13 +239,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "afd59c06",
+   "id": "94b6d6a0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-29T12:06:55.490306Z",
-     "iopub.status.busy": "2024-04-29T12:06:55.490121Z",
-     "iopub.status.idle": "2024-04-29T12:06:55.503519Z",
-     "shell.execute_reply": "2024-04-29T12:06:55.503008Z"
+     "iopub.execute_input": "2024-04-30T12:41:44.896094Z",
+     "iopub.status.busy": "2024-04-30T12:41:44.895630Z",
+     "iopub.status.idle": "2024-04-30T12:41:44.915097Z",
+     "shell.execute_reply": "2024-04-30T12:41:44.914459Z"
     }
    },
    "outputs": [
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc2500fb",
+   "id": "0be0eac0",
    "metadata": {},
    "source": [
     "Alternatively, you get orbital lists if you cut a flake from a material. You do this by specifying the shape of the flake.\n",
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "611cb256",
+   "id": "4754271a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-29T12:06:55.505675Z",
-     "iopub.status.busy": "2024-04-29T12:06:55.505479Z",
-     "iopub.status.idle": "2024-04-29T12:06:55.626650Z",
-     "shell.execute_reply": "2024-04-29T12:06:55.625995Z"
+     "iopub.execute_input": "2024-04-30T12:41:44.917674Z",
+     "iopub.status.busy": "2024-04-30T12:41:44.917307Z",
+     "iopub.status.idle": "2024-04-30T12:41:45.044737Z",
+     "shell.execute_reply": "2024-04-30T12:41:45.044078Z"
     }
    },
    "outputs": [],
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4785559",
+   "id": "e384f6bd",
    "metadata": {},
    "source": [
     "Now, our shape is ready and we can start cutting. To make sure that we are satisfied with what we get, we plot the flake. By default, GRANAD cuts any \"dangling\" atoms."
@@ -307,13 +307,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "2b53f1cd",
+   "id": "35df6179",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-29T12:06:55.629624Z",
-     "iopub.status.busy": "2024-04-29T12:06:55.629310Z",
-     "iopub.status.idle": "2024-04-29T12:06:58.992949Z",
-     "shell.execute_reply": "2024-04-29T12:06:58.992291Z"
+     "iopub.execute_input": "2024-04-30T12:41:45.047879Z",
+     "iopub.status.busy": "2024-04-30T12:41:45.047324Z",
+     "iopub.status.idle": "2024-04-30T12:41:48.706880Z",
+     "shell.execute_reply": "2024-04-30T12:41:48.706308Z"
     }
    },
    "outputs": [
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21e13094",
+   "id": "d46915fe",
    "metadata": {},
    "source": [
     "For more information on cutting, including different edge types and how to keep dangling atoms, have a look at the corresponding tutorial."
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0557c6b7",
+   "id": "6c0470e9",
    "metadata": {},
    "source": [
     "## A first simulation"
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2505d2d1",
+   "id": "31f0c9fd",
    "metadata": {},
    "source": [
     "To get a feeling of the setup, we first inspect the energies of the flake"
@@ -359,13 +359,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "9902ea1a",
+   "id": "5ffa2030",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-29T12:06:58.995713Z",
-     "iopub.status.busy": "2024-04-29T12:06:58.995222Z",
-     "iopub.status.idle": "2024-04-29T12:07:01.061404Z",
-     "shell.execute_reply": "2024-04-29T12:07:01.060729Z"
+     "iopub.execute_input": "2024-04-30T12:41:48.709646Z",
+     "iopub.status.busy": "2024-04-30T12:41:48.709145Z",
+     "iopub.status.idle": "2024-04-30T12:41:50.935907Z",
+     "shell.execute_reply": "2024-04-30T12:41:50.935248Z"
     }
    },
    "outputs": [
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9737baf8",
+   "id": "9d8fa17f",
    "metadata": {},
    "source": [
     "Physical observables are expectation values of Hermitian operators. GRANAD offers access to the time-resolved density matrix $\\rho(t)$ of a system by integrating a nonlinear master equation. As a result, it is possible to track the evolution of the physical observable associated with a Hermitian operator $A$ by computing $a(t) = Tr[\\rho(t) A]$. Optical properties in particular are largely determined by the polarization or dipole operator $\\hat{P}$ and they are usually expressed in frequency domain. To this end, GRANAD offers a way to compute the Fourier transform $a(\\omega)$ directly after time propagation. We will look at an example tracking the time evolution of the dipole operator below, where the computation proceeds in two steps:"
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57490b36",
+   "id": "33de5fc3",
    "metadata": {},
    "source": [
     "\n",
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "355e7d1b",
+   "id": "ef5dd747",
    "metadata": {},
    "source": [
     "We first do step 1. To obtain a broad frequency spectrum, we must pick a narrow pulse in time-domain"
@@ -413,13 +413,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "b0723159",
+   "id": "89b452ca",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-29T12:07:01.064222Z",
-     "iopub.status.busy": "2024-04-29T12:07:01.063666Z",
-     "iopub.status.idle": "2024-04-29T12:07:01.107936Z",
-     "shell.execute_reply": "2024-04-29T12:07:01.107418Z"
+     "iopub.execute_input": "2024-04-30T12:41:50.938383Z",
+     "iopub.status.busy": "2024-04-30T12:41:50.938170Z",
+     "iopub.status.idle": "2024-04-30T12:41:50.986793Z",
+     "shell.execute_reply": "2024-04-30T12:41:50.986231Z"
     }
    },
    "outputs": [],
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ecba7021",
+   "id": "4f052008",
    "metadata": {},
    "source": [
     "For step 2, a few parameters have to be chosen\n",
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0372974b",
+   "id": "caea937d",
    "metadata": {},
    "source": [
     "A simulation is just passing all of these parameters to the corresponding method of our flake."
@@ -455,13 +455,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "c93be86e",
+   "id": "3f5bc3b1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-29T12:07:01.110755Z",
-     "iopub.status.busy": "2024-04-29T12:07:01.110418Z",
-     "iopub.status.idle": "2024-04-29T12:07:03.273484Z",
-     "shell.execute_reply": "2024-04-29T12:07:03.272948Z"
+     "iopub.execute_input": "2024-04-30T12:41:50.989749Z",
+     "iopub.status.busy": "2024-04-30T12:41:50.989364Z",
+     "iopub.status.idle": "2024-04-30T12:41:53.310761Z",
+     "shell.execute_reply": "2024-04-30T12:41:53.310215Z"
     }
    },
    "outputs": [],
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57133a0a",
+   "id": "9a79bc7a",
    "metadata": {},
    "source": [
     "We see that three variables are returned: the omega axis we have specified, the dipole moment and the pulse in freqeuency domain. There is no way to control the number of points in the omega axis, because it is the result of a Fourier transform."
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37d47ade",
+   "id": "934596c9",
    "metadata": {},
    "source": [
     "We now plot the dipole moment and the pulse in frequency domain."
@@ -497,13 +497,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "0d4e6532",
+   "id": "d8e81e6e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-29T12:07:03.276343Z",
-     "iopub.status.busy": "2024-04-29T12:07:03.275955Z",
-     "iopub.status.idle": "2024-04-29T12:07:03.864966Z",
-     "shell.execute_reply": "2024-04-29T12:07:03.864241Z"
+     "iopub.execute_input": "2024-04-30T12:41:53.313642Z",
+     "iopub.status.busy": "2024-04-30T12:41:53.313258Z",
+     "iopub.status.idle": "2024-04-30T12:41:53.897213Z",
+     "shell.execute_reply": "2024-04-30T12:41:53.896671Z"
     }
    },
    "outputs": [
